--- a/assignments/108/pantheon_ftp_setup.html
+++ b/assignments/108/pantheon_ftp_setup.html
@@ -69,7 +69,7 @@
       </li>
       <li>
         <p>After you click the Save button, you should see a new folder structure in the Remote tab.  These are the folders found in your Pantheon server.</p>
-        <p>The WordPress-related folders can be found in the "code" folder.
+        <p>The WordPress-related folders can be found in the "code" folder.</p>
         <img src="../../images/assignments/108/FTP/07.png">
       </li>
       <li>
