--- a/assignments/108/pantheon_ftp_setup.html
+++ b/assignments/108/pantheon_ftp_setup.html
@@ -117,7 +117,7 @@
       <li>After that, you can retest the cookie code; it should now work the same as it did locally in MAMP, except now it's working on your remote Pantheon site.</li>
       <li>
         <p>Congrats! You successfully implemented maintenance mode on Pantheon!</p>
-        <p>(Remember to delete or change the name of .maintenance to turn off maintenance mode on your site)
+        <p>(Remember to delete or change the name of .maintenance if you want to turn off maintenance mode on your site)
       </li>
 
     </ol>
