--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -71,11 +71,11 @@
         <span>08/01 (Day 20)</span>
         <span>SEO</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>08/02 (Day 21)</span>
         <span>Finalize theme | Build out scaffolding (empty posts/page, menus)</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>08/03 (Day 22)</span>
         <span>Populate site with placeholder content | Populate 1-2 pages w/ real content</span>
       </div>
