--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -104,6 +104,10 @@
         <span>08/15 (Day 28)</span>
         <span>Final Eval | Final Project Due</span>
       </div>
+      <div class="agendaItem">
+        <span>08/16 (Day 01)</span>
+        <span>109 Begins!</span>
+      </div>
     </div>
 
   </body>
