--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -54,7 +54,7 @@
       <h3>(if you're not here by 6:07, you're tardy!)</h3>
       <h2>Period 1 (6:10-6:50): Critique!</h2>
       <h2>Period 2 (7:00-7:50): More Critique!</h2>
-      <h2>Period 3 (8:10-9:50): Even more Critique!</h2>
+      <h2>Period 3 (8:10-9:50): Even more Critique?</h2>
       <h2>Period 4 (10:10-11): Lab Time </h2>
     </div>
 
@@ -62,27 +62,12 @@
     <div id="agenda">
       <h2 class="warning">Assignment 15 - (3-4 Real Pages) - Due Yesterday</h2>
       <h2>Portfolio Critique #2 (3-4 Pages) Tonight</h2>
+      <h2>[NEW] Assignment 16 (Resume) - Due Monday, but turn in earlier for critiques</h2>
+      <h2>Resume Critique Tomorrow</h2>
     </div>
 
     <h1>Coming Soon</h1>
     <div id="agenda">
-      <div class="agendaItem done">
-        <span>08/01 (Day 20)</span>
-        <span>SEO</span>
-      </div>
-      <div class="agendaItem done">
-        <span>08/02 (Day 21)</span>
-        <span>Finalize theme | Build out scaffolding (empty posts/page, menus)</span>
-      </div>
-      <div class="agendaItem done">
-        <span>08/03 (Day 22)</span>
-        <span>Populate site with placeholder content | Populate 1-2 pages w/ real content</span>
-      </div>
-      <div class="agendaItem done">
-        <span>08/04 (Day 23)</span>
-        <span>Portfolio Critique #1</span>
-      </div>
-      <br><br>
       <div class="agendaItem done">
         <span>08/08 (Day 24)</span>
         <span>WordPress Quiz #2 | Address critique feedback | Populate more pages w/ real content</span>
