--- a/examples/107/week5/Day17_backgroundImage.html
+++ b/examples/107/week5/Day17_backgroundImage.html
@@ -13,19 +13,19 @@
       }
 
       .example1 {
-        background-image: url("../../images/dice.png");
+        background-image: url("../../../images/dice.png");
       }
       .example2 {
         /* first image is drawn on top of the second */
-        background-image: url("../../images/dice.png"), url("../../images/abstract8.jpg");
+        background-image: url("../../../images/dice.png"), url("../../images/abstract8.jpg");
       }
       .example3 {
-        background-image: url("../../images/abstract8.jpg");
+        background-image: url("../../../images/abstract8.jpg");
         /* image is stretched to fill its container in both x and y directions*/
         background-size: 100% 100%;
       }
       .example4 {
-        background-image: url("../../images/abstract8.jpg");
+        background-image: url("../../../images/abstract8.jpg");
         /* image will be anchored to the right side of the container */
         /* other valid keywords: left, right, top, bottom, center */
         /* can also be combined: e.g. top right */
@@ -45,11 +45,11 @@
           background- properties together */
         background:
           /* background-position background-repeat background-image */
-          center no-repeat url("../../images/dice.png"),
+          center no-repeat url("../../../images/dice.png"),
           /* background-position/background-size background-image */
           /* note that background-size can only appear after
               background-position, followed by a slash (/) */
-          left/100% 100% url("../../images/abstract8.jpg");
+          left/100% 100% url("../../../images/abstract8.jpg");
       }
       p.code {
         font-family: Courier New;
