--- a/examples/107/week5/Day17_hero.html
+++ b/examples/107/week5/Day17_hero.html
@@ -11,7 +11,7 @@
         text-align: center;
       }
       .hero1 {
-        background: center center/100% url("../../images/SnowyHero.jpg");
+        background: center center/100% url("../../../images/SnowyHero.jpg");
         position: relative;
         height: 500px;
         transition: filter 0.5s linear;
@@ -28,7 +28,7 @@
       }
 
       .hero2 {
-        background-image: url("../../images/Forest.gif");
+        background-image: url("../../../images/Forest.gif");
         background-position: center center;
         background-size: cover;
         position: relative;
@@ -49,7 +49,7 @@
       }
 
       .hero3 {
-        background-image: url("../../images/clouds.gif");
+        background-image: url("../../../images/clouds.gif");
         background-position: center;
         background-size: cover;
         background-attachment: fixed;
