--- a/examples/107/week5/Day18_transitions.html
+++ b/examples/107/week5/Day18_transitions.html
@@ -38,7 +38,7 @@
       This is a basic transition.
     </h1>
     <div id="box"></div>
-    <img src="../../images/cat.png" alt="cat">
+    <img src="../../../images/cat.png" alt="cat">
     <p>
       Ita expetendis et deserunt, senserit a quis doctrina.
       Officia est nisi, ne probant transferrem si do mandaremus a
