--- a/examples/107/week5/Day17_hero.html
+++ b/examples/107/week5/Day17_hero.html
@@ -28,7 +28,7 @@
       }
 
       .hero2 {
-        background-image: url("../../../images/Forest.gif");
+        background-image: url("../../../images/forest.gif");
         background-position: center center;
         background-size: cover;
         position: relative;
