--- a/examples/107/week5/Day17_backgroundImage.html
+++ b/examples/107/week5/Day17_backgroundImage.html
@@ -17,7 +17,7 @@
       }
       .example2 {
         /* first image is drawn on top of the second */
-        background-image: url("../../../images/dice.png"), url("../../images/abstract8.jpg");
+        background-image: url("../../../images/dice.png"), url("../../../images/abstract8.jpg");
       }
       .example3 {
         background-image: url("../../../images/abstract8.jpg");
