--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -53,9 +53,9 @@
       <h2>Announcements (6:05)</h2>
       <h3>(if you're not here by 6:07, you're tardy!)</h3>
       <h2>Period 1 (6:10-6:50): Final Eval Unveiled</h2>
-      <h2>Period 2 (7:00-7:50): Lab Time | 1:1 Critiques</h2>
-      <h2>Period 3 (8:10-9:50): Lab Time | 1:1 Critiques</h2>
-      <h2>Period 4 (10:10-11): Lab Time | 1:1 Critiques</h2>
+      <h2>Period 2 (7:00-7:50): Lab Time</h2>
+      <h2>Period 3 (8:10-9:50): Lab Time</h2>
+      <h2>Period 4 (10:10-11): Lab Time | Turn in everything!</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
@@ -89,7 +89,7 @@
       </div>
       <div class="agendaItem">
         <span>08/16 (Day 01)</span>
-        <span>109 Begins!</span>
+        <span>109 Begins! Portfolio Critique!</span>
       </div>
     </div>
 
