--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -65,7 +65,7 @@
 
     <h1>Coming Soon</h1>
     <div id="agenda">
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>08/16 (Day 01)</span>
         <span>109 Begins! Portfolio Critique!</span>
       </div>
