--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -112,24 +112,28 @@
         <span>Lab Day - Photoshop</span>
       </div>
       <div class="agendaItem">
-        <span>09/05 (Day 12)</span>
+        <span>09/05 (Labor Day)</span>
+        <span>NO CLASS</span>
+      </div>
+      <div class="agendaItem">
+        <span>09/06 (Day 12)</span>
         <span>Photoshop Wrap Up | InDesign/AfterEffects/UI/UX Planning</span>
       </div>
       <br>
       <div class="agendaItem">
-        <span>09/06 (Day 13)</span>
+        <span>09/07 (Day 13)</span>
         <span>InDesign/AfterEffects/UI/UX Critiques</span>
       </div>
       <div class="agendaItem">
-        <span>09/07 (Day 14)</span>
+        <span>09/08 (Day 14)</span>
         <span>Lab Day - InDesign/AfterEffects/UI/UX</span>
       </div>
       <div class="agendaItem">
-        <span>09/08 (Day 15)</span>
+        <span>09/012 (Day 15)</span>
         <span>Lab Day - InDesign/AfterEffects/UI/UX</span>
       </div>
       <div class="agendaItem">
-        <span>09/12 (Day 16)</span>
+        <span>09/13 (Day 16)</span>
         <span>InDesign/AfterEffects/UI/UX Wrap Up | Final Exam</span>
       </div>
     </div>
