--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -42,6 +42,16 @@
       .agendaItem span:not(:first-child) {
         flex: 1;
       }
+      .assnItem {
+        display: flex;
+        max-width: 800px;
+      }
+      .assnItem span:first-child {
+        flex: 1;
+      }
+      .assnItem span:not(:first-child) {
+        width: 200px;
+      }
       .done {
         text-decoration: line-through;
       }
@@ -60,7 +70,18 @@
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="warning">Planning Assignment (Web Development) - Due yesterday</h2>
+      <h2 class="assnItem warning">
+        <span>Planning Assignment (Web Development)</span>
+        <span>Due yesterday</span>
+      </h2>
+      <h2 class="assnItem">
+        <span>Project Turn-in &amp; Retro (Web Dev)</span>
+        <span>Due Monday</span>
+      </h2>
+      <h2 class="assnItem">
+        <span>Planning Assignment (Illustrator)</span>
+        <span>Due Monday</span>
+      </h2>
     </div>
 
     <h1>Coming Soon</h1>
