--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,7 +58,7 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 109 Agenda for Day 3 (8/18)</h1>
+    <h1>GDWD 109 Agenda for Day 4 (8/22)</h1>
     <div id="agenda">
       <h2>Announcements (6:05)</h2>
       <h3>(if you're not here by 6:07, you're tardy!)</h3>
@@ -94,7 +94,7 @@
         <span>08/17 (Day 02)</span>
         <span>Lab Day - Web Dev</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>08/18 (Day 03)</span>
         <span>Lab Day - Web Dev</span>
       </div>
