--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -70,17 +70,13 @@
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem warning">
-        <span>Planning Assignment (Web Development)</span>
-        <span>Due yesterday</span>
-      </h2>
       <h2 class="assnItem">
         <span>Project Turn-in &amp; Retro (Web Dev)</span>
-        <span>Due Monday</span>
+        <span>Due Tonight</span>
       </h2>
       <h2 class="assnItem">
         <span>Planning Assignment (Illustrator)</span>
-        <span>Due Monday</span>
+        <span>Due Tonight</span>
       </h2>
     </div>
 
