--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -70,11 +70,11 @@
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem">
+      <h2 class="highlight assnItem">
         <span>Project Turn-in &amp; Retro (Web Dev)</span>
         <span>Due Tonight</span>
       </h2>
-      <h2 class="assnItem">
+      <h2 class="highlight assnItem">
         <span>Planning Assignment (Illustrator)</span>
         <span>Due Tonight</span>
       </h2>
