--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,25 +58,25 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 109 Agenda for Day 4 (8/22)</h1>
+    <h1>GDWD 109 Agenda for Day 5 (8/23)</h1>
     <div id="agenda">
       <h2>Announcements (6:05)</h2>
       <h3>(if you're not here by 6:07, you're tardy!)</h3>
-      <h2>Period 1 (6:10-6:50): Lab Time</h2>
-      <h2>Period 2 (7:00-7:50): Lab Time</h2>
-      <h2>Period 3 (8:10-9:50): Lab Time</h2>
-      <h2>Period 4 (10:10-11): Lab Time</h2>
+      <h2>Period 1 (6:10-6:50): Critique</h2>
+      <h2>Period 2 (7:00-7:50): Critique</h2>
+      <h2>Period 3 (8:10-9:50): Critique</h2>
+      <h2>Period 4 (10:10-11): Critique</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="highlight assnItem">
+      <h2 class="warning assnItem">
         <span>Project Turn-in &amp; Retro (Web Dev)</span>
-        <span>Due Tonight</span>
+        <span>Due Yesterday</span>
       </h2>
-      <h2 class="highlight assnItem">
+      <h2 class="warning assnItem">
         <span>Planning Assignment (Illustrator)</span>
-        <span>Due Tonight</span>
+        <span>Due Yesterday</span>
       </h2>
     </div>
 
@@ -94,7 +94,7 @@
         <span>08/18 (Day 03)</span>
         <span>Lab Day - Web Dev</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>08/22 (Day 04)</span>
         <span>Web Dev Wrap Up | Illustrator Planning</span>
       </div>
