--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -70,13 +70,9 @@
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="warning assnItem">
-        <span>Project Turn-in &amp; Retro (Web Dev)</span>
-        <span>Due Yesterday</span>
-      </h2>
-      <h2 class="warning assnItem">
-        <span>Planning Assignment (Illustrator)</span>
-        <span>Due Yesterday</span>
+      <h2 class="assnItem">
+        <span>Project Turn-in &amp; Retro (Illustrator)</span>
+        <span>Due Monday</span>
       </h2>
     </div>
 
@@ -99,13 +95,13 @@
         <span>Web Dev Wrap Up | Illustrator Planning</span>
       </div>
       <br>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>08/23 (Day 05)</span>
         <span>Illustrator Critiques</span>
       </div>
       <div class="agendaItem">
         <span>08/24 (Day 06)</span>
-        <span>Lab Day - Illustrator</span>
+        <span>Illustrator Critiques cont. | Lab Day</span>
       </div>
       <div class="agendaItem">
         <span>08/25 (Day 07)</span>
