--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -71,7 +71,7 @@
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem">
-        <span>Project Turn-in &amp; Retro (Illustrator)</span>
+        <span>Project Turn-in (Illustrator)</span>
         <span>Due Monday</span>
       </h2>
     </div>
