--- a/examples/rockpaperscissors/scissors.html
+++ b/examples/rockpaperscissors/scissors.html
@@ -28,7 +28,7 @@
     </nav>
     <script src="logic.js"></script>
     <script type="text/javascript">
-      playGame(PAPER);
+      playGame(SCISSORS);
     </script>
   </body>
 </html>
