--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,12 +58,12 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 109 Agenda for Day 6 (8/24)</h1>
+    <h1>GDWD 109 Agenda for Day 7 (8/25)</h1>
     <div id="agenda">
       <h2>Announcements (6:05)</h2>
       <h3>(if you're not here by 6:07, you're tardy!)</h3>
-      <h2>Period 1 (6:10-6:50): Critique</h2>
-      <h2>Period 2 (7:00-7:50): Critique | Lab Time</h2>
+      <h2>Period 1 (6:10-6:50): Lab Time</h2>
+      <h2>Period 2 (7:00-7:50): Lab Time</h2>
       <h2>Period 3 (8:10-9:50): Lab Time</h2>
       <h2>Period 4 (10:10-11): Lab Time</h2>
     </div>
@@ -99,7 +99,7 @@
         <span>08/23 (Day 05)</span>
         <span>Illustrator Critiques</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>08/24 (Day 06)</span>
         <span>Illustrator Critiques cont. | Lab Day</span>
       </div>
