--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,43 +58,34 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 109 Agenda for Day 7 (8/25)</h1>
+    <h1>GDWD 109 Agenda for Day 9 (8/30)</h1>
     <div id="agenda">
       <h2>Announcements (6:05)</h2>
-      <h3>(if you're not here by 6:07, you're tardy!)</h3>
+      <h3>(if you're not here by 6:10, you're tardy!)</h3>
       <h2>Period 1 (6:10-6:50): Lab Time</h2>
       <h2>Period 2 (7:00-7:50): Lab Time</h2>
-      <h2>Period 3 (8:10-9:50): Lab Time</h2>
+      <h2>Period 3 (8:10-9:50): Photoshop/InDesign Critique</h2>
       <h2>Period 4 (10:10-11): Lab Time</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem">
+      <h2 class="assnItem warning">
         <span>Project Turn-in (Illustrator)</span>
-        <span>Due Monday</span>
+        <span>Due Yesterday</span>
+      </h2>
+      <h2 class="assnItem warning">
+        <span>Process Blog Turn-in (Illustrator)</span>
+        <span>Due Yesterday</span>
+      </h2>
+      <h2 class="assnItem warning">
+        <span>Planning Assignment (Photoshop/InDesign)</span>
+        <span>Due Yesterday</span>
       </h2>
     </div>
 
     <h1>Coming Soon</h1>
     <div id="agenda">
-      <div class="agendaItem done">
-        <span>08/16 (Day 01)</span>
-        <span>109 Begins! Portfolio Critique!</span>
-      </div>
-      <div class="agendaItem done">
-        <span>08/17 (Day 02)</span>
-        <span>Lab Day - Web Dev</span>
-      </div>
-      <div class="agendaItem done">
-        <span>08/18 (Day 03)</span>
-        <span>Lab Day - Web Dev</span>
-      </div>
-      <div class="agendaItem done">
-        <span>08/22 (Day 04)</span>
-        <span>Web Dev Wrap Up | Illustrator Planning</span>
-      </div>
-      <br>
       <div class="agendaItem done">
         <span>08/23 (Day 05)</span>
         <span>Illustrator Critiques</span>
@@ -103,11 +94,11 @@
         <span>08/24 (Day 06)</span>
         <span>Illustrator Critiques cont. | Lab Day</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>08/25 (Day 07)</span>
         <span>Lab Day - Illustrator</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>08/29 (Day 08)</span>
         <span>Illustrator Wrap Up | Photoshop Planning</span>
       </div>
