--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,7 +58,7 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 109 Agenda for Day 9 (8/30)</h1>
+    <h1>GDWD 109 Agenda for Day 10 (8/31)</h1>
     <div id="agenda">
       <h2>Announcements (6:05)</h2>
       <h3>(if you're not here by 6:10, you're tardy!)</h3>
@@ -70,17 +70,13 @@
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem warning">
-        <span>Project Turn-in (Illustrator)</span>
-        <span>Due Yesterday</span>
+      <h2 class="assnItem">
+        <span>Project Turn-in (Photoshop/InDesign)</span>
+        <span>Due Tuesday</span>
       </h2>
-      <h2 class="assnItem warning">
-        <span>Process Blog Turn-in (Illustrator)</span>
-        <span>Due Yesterday</span>
-      </h2>
-      <h2 class="assnItem warning">
-        <span>Planning Assignment (Photoshop/InDesign)</span>
-        <span>Due Yesterday</span>
+      <h2 class="assnItem">
+        <span>Process Blog Turn-in (Photoshop/InDesign)</span>
+        <span>Due Tuesday</span>
       </h2>
     </div>
 
@@ -96,7 +92,7 @@
       </div>
       <div class="agendaItem done">
         <span>08/25 (Day 07)</span>
-        <span>Lab Day - Illustrator</span>
+        <span>Lab Day (Illustrator)</span>
       </div>
       <div class="agendaItem done">
         <span>08/29 (Day 08)</span>
@@ -105,15 +101,15 @@
       <br>
       <div class="agendaItem">
         <span>08/30 (Day 09)</span>
-        <span>Photoshop Critiques</span>
+        <span>Photoshop/InDesign Critiques Part 1</span>
       </div>
       <div class="agendaItem">
         <span>08/31 (Day 10)</span>
-        <span>Lab Day - Photoshop</span>
+        <span>Photoshop/InDesign Critiques Part 2</span>
       </div>
       <div class="agendaItem">
         <span>09/01 (Day 11)</span>
-        <span>Lab Day - Photoshop</span>
+        <span>Lab Day (Photoshop/InDesign) | Final Exam Review 1</span>
       </div>
       <div class="agendaItem">
         <span>09/05 (Labor Day)</span>
@@ -121,24 +117,24 @@
       </div>
       <div class="agendaItem">
         <span>09/06 (Day 12)</span>
-        <span>Photoshop Wrap Up | InDesign/AfterEffects/UI/UX Planning</span>
+        <span>Photoshop Wrap Up | AfterEffects/UI/UX Planning | Final Exam Review 2</span>
       </div>
       <br>
       <div class="agendaItem">
         <span>09/07 (Day 13)</span>
-        <span>InDesign/AfterEffects/UI/UX Critiques</span>
+        <span>AfterEffects/UI/UX Critiques Part 1</span>
       </div>
       <div class="agendaItem">
         <span>09/08 (Day 14)</span>
-        <span>Lab Day - InDesign/AfterEffects/UI/UX</span>
+        <span>AfterEffects/UI/UX Critiques Part 1</span>
       </div>
       <div class="agendaItem">
-        <span>09/012 (Day 15)</span>
-        <span>Lab Day - InDesign/AfterEffects/UI/UX</span>
+        <span>09/12 (Day 15)</span>
+        <span>Lab Day (AfterEffects/UI/UX) | Final Exam Review 3</span>
       </div>
       <div class="agendaItem">
         <span>09/13 (Day 16)</span>
-        <span>InDesign/AfterEffects/UI/UX Wrap Up | Final Exam</span>
+        <span>AfterEffects/UI/UX Wrap Up | Final Exam</span>
       </div>
     </div>
 
