--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,13 +58,13 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 109 Agenda for Day 10 (8/31)</h1>
+    <h1>GDWD 109 Agenda for Day 11 (9/1)</h1>
     <div id="agenda">
       <h2>Announcements (6:05)</h2>
       <h3>(if you're not here by 6:10, you're tardy!)</h3>
       <h2>Period 1 (6:10-6:50): Lab Time</h2>
       <h2>Period 2 (7:00-7:50): Lab Time</h2>
-      <h2>Period 3 (8:10-9:50): Photoshop/InDesign Critique</h2>
+      <h2>Period 3 (8:10-9:50): Final Exam Review #1</h2>
       <h2>Period 4 (10:10-11): Lab Time</h2>
     </div>
 
@@ -99,17 +99,17 @@
         <span>Illustrator Wrap Up | Photoshop Planning</span>
       </div>
       <br>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>08/30 (Day 09)</span>
         <span>Photoshop/InDesign Critiques Part 1</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>08/31 (Day 10)</span>
         <span>Photoshop/InDesign Critiques Part 2</span>
       </div>
       <div class="agendaItem">
         <span>09/01 (Day 11)</span>
-        <span>Lab Day (Photoshop/InDesign) | Final Exam Review 1</span>
+        <span>Lab Day (Photoshop/InDesign) | Final Exam Review #1</span>
       </div>
       <div class="agendaItem">
         <span>09/05 (Labor Day)</span>
@@ -117,7 +117,7 @@
       </div>
       <div class="agendaItem">
         <span>09/06 (Day 12)</span>
-        <span>Photoshop Wrap Up | AfterEffects/UI/UX Planning | Final Exam Review 2</span>
+        <span>Photoshop Wrap Up | AfterEffects/UI/UX Planning | Final Exam Review #2</span>
       </div>
       <br>
       <div class="agendaItem">
@@ -130,7 +130,7 @@
       </div>
       <div class="agendaItem">
         <span>09/12 (Day 15)</span>
-        <span>Lab Day (AfterEffects/UI/UX) | Final Exam Review 3</span>
+        <span>Lab Day (AfterEffects/UI/UX) | Final Exam Review #3</span>
       </div>
       <div class="agendaItem">
         <span>09/13 (Day 16)</span>
