--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,47 +58,34 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 109 Agenda for Day 11 (9/1)</h1>
+    <h1>GDWD 109 Agenda for Day 12 (9/6)</h1>
     <div id="agenda">
       <h2>Announcements (6:05)</h2>
       <h3>(if you're not here by 6:10, you're tardy!)</h3>
       <h2>Period 1 (6:10-6:50): Lab Time</h2>
       <h2>Period 2 (7:00-7:50): Lab Time</h2>
-      <h2>Period 3 (8:10-9:50): Final Exam Review #1</h2>
+      <h2>Period 3 (8:10-9:50): Final Exam Review #2</h2>
       <h2>Period 4 (10:10-11): Lab Time</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem">
+      <h2 class="assnItem highlight">
         <span>Project Turn-in (Photoshop/InDesign)</span>
-        <span>Due Tuesday</span>
+        <span>Due tonight</span>
       </h2>
-      <h2 class="assnItem">
+      <h2 class="assnItem highlight">
         <span>Process Blog Turn-in (Photoshop/InDesign)</span>
-        <span>Due Tuesday</span>
+        <span>Due tonight</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>Planning Assignment (AfterEffects/UI/UX)</span>
+        <span>Due tonight</span>
       </h2>
     </div>
 
     <h1>Coming Soon</h1>
     <div id="agenda">
-      <div class="agendaItem done">
-        <span>08/23 (Day 05)</span>
-        <span>Illustrator Critiques</span>
-      </div>
-      <div class="agendaItem done">
-        <span>08/24 (Day 06)</span>
-        <span>Illustrator Critiques cont. | Lab Day</span>
-      </div>
-      <div class="agendaItem done">
-        <span>08/25 (Day 07)</span>
-        <span>Lab Day (Illustrator)</span>
-      </div>
-      <div class="agendaItem done">
-        <span>08/29 (Day 08)</span>
-        <span>Illustrator Wrap Up | Photoshop Planning</span>
-      </div>
-      <br>
       <div class="agendaItem done">
         <span>08/30 (Day 09)</span>
         <span>Photoshop/InDesign Critiques Part 1</span>
@@ -107,7 +94,7 @@
         <span>08/31 (Day 10)</span>
         <span>Photoshop/InDesign Critiques Part 2</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>09/01 (Day 11)</span>
         <span>Lab Day (Photoshop/InDesign) | Final Exam Review #1</span>
       </div>
