--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -98,7 +98,7 @@
         <span>09/01 (Day 11)</span>
         <span>Lab Day (Photoshop/InDesign) | Final Exam Review #1</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>09/05 (Labor Day)</span>
         <span>NO CLASS</span>
       </div>
