--- a/examples/107/week7/Day25_javascript_countdown.html
+++ b/examples/107/week7/Day25_javascript_countdown.html
@@ -10,20 +10,44 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 500px;
-        background-color: pink;
-      }
-      #countdown {
-        display: inline-block;
+        height: 100vh;
+        background-color: lavender;
       }
     </style>
   </head>
   <body>
     <div id="hero">
-      <h1 id="countdown">PLACEHOLDER</h1>
+      <h1 id="countdown">Loading countdown...</h1>
     </div>
     <script type="text/javascript">
-      let deadline = new Date("June 23, 2022 23:00:00");
+
+      function convertToDaysLeft(milliseconds) {
+        return Math.floor(milliseconds / (1000 * 60 * 60 * 24));
+      }
+
+      function convertToHoursLeft(milliseconds) {
+        return Math.floor(
+          (milliseconds % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)
+        );
+      }
+
+      function convertToMinutesLeft(milliseconds) {
+        return Math.floor(
+          (milliseconds % (1000 * 60 * 60)) / (1000 * 60)
+        );
+      }
+
+      function convertToSecondsLeft(milliseconds) {
+        return Math.floor(
+          (milliseconds % (1000 * 60)) / 1000
+        );
+      }
+
+      function formatCountdownText(days, hours, minutes, seconds) {
+        return `${days}d ${hours}h ${minutes}m ${seconds}s left`;
+      }
+
+      let deadline = new Date("November 28, 2022 13:00:00");
       let countdown = document.getElementById("countdown");
       countdown.innerHTML = "";
 
@@ -33,19 +57,13 @@
         // # of milliseconds between deadline and now
         let timeLeft = deadline.getTime() - now.getTime();
 
-        let days = Math.floor(timeLeft / (1000 * 60 * 60 * 24));
-        let hours = Math.floor(
-          (timeLeft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)
-        );
-        let minutes = Math.floor(
-          (timeLeft % (1000 * 60 * 60)) / (1000 * 60)
-        );
-        let seconds = Math.floor(
-          (timeLeft % (1000 * 60)) / 1000
-        );
+        let daysLeft = convertToDaysLeft(timeLeft);
+        let hoursLeft = convertToHoursLeft(timeLeft);
+        let minutesLeft = convertToMinutesLeft(timeLeft);
+        let secondsLeft = convertToSecondsLeft(timeLeft);
 
         countdown.innerHTML =
-          `${days}d ${hours}h ${minutes}m ${seconds}s left`;
+          formatCountdownText(daysLeft, hoursLeft, minutesLeft, secondsLeft);
       }
 
       setInterval(setCountdown, 1000);
