--- a/examples/107/week7/bouncingball2.html
+++ b/examples/107/week7/bouncingball2.html
@@ -3,67 +3,91 @@
   <head>
     <title>Bouncing Ball example</title>
     <style>
-      #fence {
-        border: 5px dashed black;
-        height: 500px;
+      #room {
+        border: 5px solid black;
         position: relative;
-        width: 600px;
       }
       #ball {
         background-color: red;
         border-radius: 50%;
-        height: 50px;
         position: relative;
-        width: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+        font-family: Verdana;
       }
     </style>
   </head>
   <body>
-    <div id="fence">
+    <div id="room">
       <div id="ball"></div>
     </div>
     <script type="text/javascript">
-      let ball = document.getElementById('ball');
+      // Initializing room and ball dimensions
+      let roomWidth = 600;
+      let roomHeight = 500;
+      let width = 50;
+      let height = 50;
 
+      let room = document.getElementById('room');
+      room.style.width = roomWidth + 'px';
+      room.style.height = roomHeight + 'px';
+
+      let ball = document.getElementById('ball');
+      ball.style.width = width + 'px';
+      ball.style.height = height + 'px';
+
+      // Initializing ball physics
       let ballX = 0;
       let ballY = 0;
-      let ballXVelocity = 5;
-      let ballYVelocity = 0;
+      let ballXSpeed = 3;
+      let ballYSpeed = 0;
+      let gravity = 0.3;
 
-      let ballYAccelleration = 0.3;
-
+      // Implementing ball physics
       function moveBall() {
-        ballYVelocity += ballYAccelleration;
-        // ballX = ballX + ballXVelocity;
-        ballX += ballXVelocity;
-        ballY += ballYVelocity;
+        // add gravity to the ball's vertical speed
+        ballYSpeed += gravity;
 
-        // || is the OR operator
-        // && is the AND operator
-        if (ballX + 50 > 600 || ballX < 0) {
-          // ballXVelocity = ballXVelocity * -1;
-          if (ballX + 50 > 600) {
-            ballX = 600 - 50;
+        // move the ball's location by the speed variables
+        ballX += ballXSpeed;
+        ballY += ballYSpeed;
+
+        // checking for collisions against the walls
+        if (ballX < 0 || ballX + width > roomWidth) {
+          // if the ball has passed the right wall, reset it to the right wall
+          if (ballX + width > roomWidth) {
+            ballX = roomWidth - width;
+          // otherwise, reset the ball to the left wall
           } else {
             ballX = 0;
           }
-          ballXVelocity *= -1;
+          // reverse the ball's horizontal movement
+          ballXSpeed *= -1;
         }
-        if (ballY + 50 > 500 || ballY < 0) {
-          if (ballY + 50 > 500) {
-            ballY = 500 - 50;
+
+        // checking for collisions on the floor
+        if (ballY + height > roomHeight) {
+          // if the ball has passed through the floor, reset it to the floor
+          if (ballY + height > roomHeight) {
+            ballY = roomHeight - height;
           }
-          ballXVelocity *= 0.99;
-          ballYVelocity *= -0.85;
+          // to simulate friction, we reduce the speed by a fraction,
+          // as well as reversing the vertical movement to make it bounce
+          ballXSpeed *= 0.99;
+          ballYSpeed *= -0.85;
         }
 
-
+        // after completing the ball's position calculation,
+        // we update the ball element's position via the top/left properties
         ball.style.left = ballX + 'px';
         ball.style.top = ballY + 'px';
-
       }
 
+      // use setInterval to update every 10 milliseconds, causing animation
       setInterval(moveBall, 10);
+
     </script>
   </body>
 </html>
