--- a/examples/rockpaperscissors/rock.html
+++ b/examples/rockpaperscissors/rock.html
@@ -9,14 +9,14 @@
     <div id="game" class="animate">
       <div id="duel">
         <div id="left">
-          <img id="rockLeft" src="../../images/RockL.png">
-          <img id="paperLeft" src="../../images/PaperL.png">
-          <img id="scissorsLeft" src="../../images/ScissorsL.png">
+          <img id="rockLeft" src="images/RPS_RockL.png">
+          <img id="paperLeft" src="images/RPS_PaperL.png">
+          <img id="scissorsLeft" src="images/RPS_ScissorsL.png">
         </div>
         <div id="right">
-          <img id="rockRight" src="../../images/RockR.png">
-          <img id="paperRight" src="../../images/PaperR.png">
-          <img id="scissorsRight" src="../../images/ScissorsR.png">
+          <img id="rockRight" src="images/RPS_RockR.png">
+          <img id="paperRight" src="images/RPS_PaperR.png">
+          <img id="scissorsRight" src="images/RPS_ScissorsR.png">
         </div>
       </div>
       <h3 id="selections">You picked <span id="yourPickText"></span>. I picked <span id="myPickText"></span>.</h3>
