--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,13 +58,13 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 107 Agenda for 9/8</h1>
+    <h1>GDWD 108 Agenda for 9/12</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): Lab Time</h2>
-      <h2>Period 2 (9:00-9:50): CSS Review</h2>
-      <h2>Period 3 (10:10-11:50): CSS and Flexbox Review</h2>
+      <h2>Period 1 (8:10-8:50): Expectations, Surveys, and Quiz</h2>
+      <h2>Period 2 (9:00-9:50): Document Flow and the Box Model</h2>
+      <h2>Period 3 (10:10-11:50): Navbar Assignment</h2>
       <h2>Period 4 (12:10pm-1pm): Lab Time</h2>
     </div>
 
