--- a/index.html
+++ b/index.html
@@ -31,130 +31,105 @@
       </h2>
 
       <div class="portfolio">
-        <a href="https://ad-graphics.github.io/" target="_blank">
-          Alexandra's Portfolio
+        <a href="https://akimah.github.io/Portfolio/" target="_blank">
+          Akimah's Portfolio
         </a>
-        <a href="https://github.com/ad-graphics/ad-graphics.github.io" target="_blank">
-          Alexandra's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://arkinnick92.github.io/" target="_blank">
-          Andrew's Portfolio
-        </a>
-        <a href="https://github.com/arkinnick92/arkinnick92.github.io" target="_blank">
-          Andrew's Repository
+        <a href="https://github.com/akimah/Portfolio/tree/main/108" target="_blank">
+          Akimah's Repository
         </a>
       </div>
 
       <div class="portfolio">
-        <a href="https://antoflogom.github.io/" target="_blank">
-          Antoniel's Portfolio
+        <a href="https://Akirsch97.github.io/Portfolio/" target="_blank">
+          Ashley's Portfolio
         </a>
-        <a href="https://github.com/AntoFloGom/AntoFloGom.github.io" target="_blank">
-          Antoniel's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://deandrepx.github.io/" target="_blank">
-          Deandre's Portfolio
-        </a>
-        <a href="https://github.com/deandrepx/deandrepx.github.io" target="_blank">
-          Deandre's Repository
+        <a href="https://github.com/Akirsch97/Portfolio/tree/main/108Assignments" target="_blank">
+          Ashley's Repository
         </a>
       </div>
 
       <div class="portfolio">
-        <a href="https://wren-peak.github.io/" target="_blank">
-          Heidi's Portfolio
+        <a href="https://avamurray.github.io/Portfolio/" target="_blank">
+          Ava's Portfolio
         </a>
-        <a href="https://github.com/wren-peak/wren-peak.github.io" target="_blank">
-          Heidi's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://vynmont.github.io/" target="_blank">
-          Holvyn's Portfolio
-        </a>
-        <a href="https://github.com/vynmont/vynmont.github.io" target="_blank">
-          Holvyn's Repository
+        <a href="https://github.com/AvaMurray/Portfolio/" target="_blank">
+          Ava's Repository
         </a>
       </div>
 
       <div class="portfolio">
-        <a href="https://izmclemore.github.io/" target="_blank">
-          Imani's Portfolio
+        <a href="https://leowill25.github.io/portfolio/" target="_blank">
+          Leonard's Portfolio
         </a>
-        <a href="https://github.com/izmclemore/izmclemore.github.io" target="_blank">
-          Imani's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://jackb7.github.io/" target="_blank">
-          Jack's Portfolio
-        </a>
-        <a href="https://github.com/jackb7/jackb7.github.io" target="_blank">
-          Jack's Repository
+        <a href="https://github.com/LeoWill25/portfolio" target="_blank">
+          Leonard's Repository
         </a>
       </div>
 
       <div class="portfolio">
-        <a href="https://jamet-t.github.io/" target="_blank">
-          James' Portfolio
+        <a href="" target="_blank">
+          Lovinski's Portfolio (x)
         </a>
-        <a href="https://github.com/jamet-t/jamet-t.github.io" target="_blank">
-          James' Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://jennand456.github.io/		" target="_blank">
-          Jennifer's Portfolio
-        </a>
-        <a href="https://github.com/jennand456/jennand456.github.io" target="_blank">
-          Jennifer's Repository
+        <a href="https://github.com/LouieTrouie" target="_blank">
+          Lovinski's Repository?
         </a>
       </div>
 
       <div class="portfolio">
-        <a href="https://kreative7.github.io/" target="_blank">
-          Kathian's Portfolio
+        <a href="https://io-rocavi.github.io/Portfolio/" target="_blank">
+          Roberto's Portfolio
         </a>
-        <a href="https://github.com/kreative7/kreative7.github.io" target="_blank">
-          Kathian's Repository
-        </a>
-      </div>
-
-      <div class="portfolio">
-        <a href="https://jynxxchan.github.io/jynxxchan/" target="_blank">
-          Krista's Portfolio
-        </a>
-        <a href="https://github.com/jynxxchan/jynxxchan" target="_blank">
-          Krista's Repository
+        <a href="https://github.com/io-rocavi/Portfolio" target="_blank">
+          Roberto's Repository
         </a>
       </div>
 
       <div class="portfolio">
-        <a href="https://leilani1218.github.io/Leilani1218.github.io-" target="_blank">
-          Leilani's Portfolio
+        <a href="https://shanekawhitlock.github.io/portfolio/" target="_blank">
+          Shaneka's Portfolio
         </a>
-        <a href="https://github.com/leilani1218/Leilani1218.github.io-" target="_blank">
-          Leilani's Repository
+        <a href="https://github.com/shanekawhitlock/portfolio" target="_blank">
+          Shaneka's Repository
         </a>
       </div>
 
       <div class="portfolio">
-        <a href="https://pjmosley.github.io/" target="_blank">
-          Precious' Portfolio
+        <a href="https://soemiediaz.github.io/Portfolio/" target="_blank">
+          Soemie's Portfolio
         </a>
-        <a href="https://github.com/pjmosley/pjmosley.github.io" target="_blank">
-          Precious' Repository
+        <a href="https://github.com/SoemieDiaz/Portfolio/tree/main/GDWD%20108" target="_blank">
+          Soemie's Repository
         </a>
       </div>
+
+      <div class="portfolio">
+        <a href="https://Thischicksuze.github.io/Portfolio/" target="_blank">
+          Suzzanna's Portfolio
+        </a>
+        <a href="https://github.com/Thischicksuze/Portfolio/tree/main/Assignments/108" target="_blank">
+          Suzzanna's Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
+        <a href="https://sydneyfrazier.github.io/portfolio1/" target="_blank">
+          Sydney's Portfolio
+        </a>
+        <a href="https://github.com/sydneyfrazier/portfolio1" target="_blank">
+          Sydney's Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
+        <a href="https://tessdelcar.github.io/Portfolio-first/" target="_blank">
+          Tess's Portfolio
+        </a>
+        <a href="https://github.com/tessdelcar/Portfolio-first/tree/main/108" target="_blank">
+          Tess's Repository
+        </a>
+      </div>
+
+
     </div>
   </body>
 </html>
